# sodium-native

./: CMakeLists.txt  build.zig  bun.lockb  hello.js  package-lock.json  package.json
.github/workflows/: prebuild.yml
src/: binding.bak.c  binding.c
src/scripts/: prebuild.js
